# lekplats

./: CMakeLists.txt  README.md  do_it.sh
apps/: chaos.cpp  kmeans.cpp  langton.cpp  lekplats.cpp  van_eck.cpp
cmake/: setup_app.cmake  setup_library.cmake
include/: chaos_game.h  cluster_description.h  cluster_generator.h  image_io.h  kmeans.h  point2D.h  point2D_utils.h  van_eck_sequence.h
src/: chaos_app.cpp  chaos_game.cpp  cluster_generator.cpp  image_io.cpp  kmeans.cpp  lekplats.cpp  point2D_utils.cpp  van_eck_sequence.cpp
tests/unit/: test_chaos_game.cpp  test_cluster_generator.cpp  test_image_io.cpp  test_kmeans.cpp  test_van_eck.cpp
